# hippunfold-train-nnunet

./: README.md  Snakefile  config.yml  create_json.py  pixi.toml  pyproject.toml
