[tool.poetry]
name = "hippunfold-train-finetune"
version = "0.1.0"
description = ""
authors = ["Ali Khan <alik@robarts.ca>"]
readme = "README.md"
packages = [{include = "hippunfold_train_finetune"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
snakemake = "^7.30.1"
nnunetv2 = "^2.1"
nnunet = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
